test/src/e2e_vm_tests/test_programs/should_fail/repeated_const_one_lib/src/main.sw
script;

dep lib;
use lib::X;

const X = 5;

fn main() -> u64 {
    X
}
